FEATURE: Core | Support multiple torrent import folders and tag auto-assignment [Parg]
FEATURE: Core | Added per-subscription maximum result limits [Parg]
FEATURE: Core | Option to periodically recheck 'out of disk space' downloads for restart [Parg]
FEATURE: Core | Option to control the maximum supported file links in a download [Parg]

FEATURE: Plug | Linux support for the embedded media player [Parg]
FEATURE: Plug | Embedded media player plugin can now use VLC for playback [Parg]
FEATURE: Plug | Swarm Discoveries - more views now support 'search more'; tag aggregation [Parg]

CHANGE: UI    | Double clicking on a plugin from the overview settings panel now selects a plugin's settings [Parg]
CHANGE: UI    | Brazilian Portuguese translation update [Havokdan]
CHANGE: UI    | Basque translation update [Azpidatziak]
CHANGE: UI    | Spanish translation update [Valtiel]

CHANGE: Core  | Piece selection during swarm merging optimized for pieces with zero availability [Parg]
CHANGE: Plug  | Improved seed/peer counts for swarm discoveries [Parg]

BUGFIX: UI    | Sort order icon was reversed in torrent options dialog [Parg]
BUGFIX: UI    | Better flushing of cached color resources on scheme change [Parg]
BUGFIX: UI    | Sort order for file priority was inconsistent [Parg]
BUGFIX: UI    | When one of multiple instances of a view was closed some menus were lost [Parg]

BUGFIX: Core  | Don't pause incomplete downloads when an aggregate tag's share ratio is hit [Parg]
BUGFIX: Core  | Fixed bug with peer connections for torrents with unlimited peer connection limits [Parg]
BUGFIX: Core  | Fixed unnecessary rechecking on start of downloads with do-not-download files [Parg]
BUGFIX: Core  | Don't process aggregate share ratio rules while downloads are being deleted [Parg]
BUGFIX: Core  | Ensure 'on download complete' actions aren't fired while incomplete downloads are in a pending state [Parg]
BUGFIX: Core  | Backup/Restore now ignores corrupted config and temporary files [Parg]