@@ -5078,5 +5078,7 @@ ConfigView.label.restart.no.space.dls.interval=Restart downloads every
 azbuddy.dchat.disable.notifications=Disable Notifications
 ConfigView.label.max.file.links=Maximum file links per download
 ConfigView.label.max.file.links.warning=Warning: increasing this significantly can result in performance issues
+ConfigView.section.file.ignore.section={ConfigView.text.ignore}
+ConfigView.section.file.torrent.autoskipfilesminsize=Auto-skip files smaller than this when adding a torrent [KB]
 
 #PLEASE LEAVE ME AT VERY BOTTOM!
